<resources>
    <string name="app_name">Weather App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_weather_icon">weather icon</string>
    <string name="start_city_name">Radomsko</string>
    <string name="system_metryczny">Celcjusz</string>
    <string name="system_imperialny">Fahrenheit</string>
    <string name="humidity">Wilgotność:</string>
    <string name="visibility">Widoczność:</string>
    <string name="wind_speed">Prędkość wiatru</string>
    <string name="wind_direction">Kierunek wiatru</string>
    <string name="star_button_description">Star button used to add city to liked cities</string>
    <string name="speed_unit">m/s</string>
    <string name="temperature">Temperatura</string>
    <string name="degrees_unit">degrees</string>
    <string name="humidity_unit">%</string>
    <string name="visibility_unit">m</string>
    <string name="global_unit">Jednostka</string>
    <string name="accept_config">Akceptuj konfiguracje</string>
</resources>