<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".fragment.ConfigurationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_city_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:autofillHints=""
            android:inputType="textPostalAddress"
            android:text="@string/start_city_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <Button
            android:id="@+id/liked_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Dodaj do ⭐" />

    </LinearLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/star_button_description"
        android:minHeight="48dp"
        android:popupBackground="@drawable/shape"
        android:spinnerMode="dropdown" />

    <RadioGroup
        android:id="@+id/unit_system_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/metric_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/system_metryczny"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/imerial_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/system_imperialny"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

    </RadioGroup>

    <Button
        android:id="@+id/accept_config_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accept_config"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size" />

</LinearLayout>

