<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ConfigurationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_city_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:inputType="textPostalAddress"
            android:text="@string/start_city_name"
            android:textColor="@color/white"
            android:autofillHints="" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="Wybierz jednostkę metryczną"
            android:textColor="@color/white" />

        <RadioGroup
            android:id="@+id/unit_system_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/metric_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/system_metryczny"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/imerial_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/system_imperialny"
                android:textColor="@color/white" />

        </RadioGroup>

        <Button
            android:id="@+id/accept_config_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="Akceptuj konfiguracje"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>