<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wf_day_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/wft_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/string_weather_icon" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/temperature"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/wf_temp_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wf_units_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="viewStart"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:gravity="left"
                    android:text="@string/wind_speed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/wf_wind_speed_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/speed_unit"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:gravity="left"
                    android:text="@string/wind_direction"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/wf_wind_direction_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/degrees_unit"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:gravity="left"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/wf_humiditiy_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/humidity_unit"
                        android:textColor="@android:color/holo_orange_dark"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold" />

                </LinearLayout>
            </TableRow>

        </TableLayout>

    </LinearLayout>
</ScrollView>

